--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dschoon/react-waves": "^4.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^4.6.0",
+    "cookie": "^0.4.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
+    "react-edit-text": "^4.0.3",
+    "react-media-recorder": "^1.4.0",
     "react-player": "^2.9.0",
+    "react-slick": "^0.28.1",
     "react-toastify": "^7.0.4",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "slick-carousel": "^1.8.1"
   }
 }
